-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.17.0
-
RHEL 9.6 server
-
3
-
9223372036854775807
This issue was created by maloo for jianyu <yujian@whamcloud.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/a6f03f48-7d8e-4cbc-8aa1-9c4eede6353a
test_103a failed with the following error:
[31] $ setfacl -R -m u:bin:rwx h -- failed ~ ? setfacl: h: Operation not supported ~ ? setfacl: h/x: Operation not supported
Test session details:
clients: https://build.whamcloud.com/job/lustre-reviews/115124 - 5.14.0-503.40.1.el9_5.x86_64
servers: https://build.whamcloud.com/job/lustre-reviews/115124 - 5.14.0-570.24.1_lustre.el9.x86_64
<<Please provide additional information about the failure here>>
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanity test_103a - run_acl_subtest 'cp' failed