LU-19186 osd-ldiskfs: use posix ACL api

Since v6.1-rc1-24-g318e66856dde, we can not use
__vfs_{get|set|remove}xattr() to work with ACL,
now we need to use the posix ACL api instead.

Test-Parameters: testlist=sanity fstype=ldiskfs serverdistro=el9.6
Test-Parameters: testlist=sanityn fstype=ldiskfs serverdistro=el9.6
Test-Parameters: testlist=sanity-sec fstype=ldiskfs serverdistro=el9.6
Test-Parameters: testlist=conf-sanity fstype=ldiskfs serverdistro=el9.6
Signed-off-by: Li Dongyang <dongyangli@ddn.com>
Change-Id: I48b99b87a90b6653388192d683ba30b8b7a447cf
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/61834
Reviewed-by: Sebastien Buisson <sbuisson@ddn.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>